[project]
name = "harpreet"
version = "0.1.0"
description = ""
authors = [{ name = "Andy Miles", email = "akmiles@icloud.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "numpy>=2.2.3,<3",
    "pandas>=2.2.3,<3",
    "mypy>=1.15.0,<2",
    "pysnooper>=1.2.1,<2",
    "loguru>=0.7.3,<0.8",
    "chromadb>=0.6.3",
    "pyspark>=3.5.5",
    "setuptools>=76.0.0",
    "wheel>=0.45.1",
    "pymongo>=4.11.3",
]

[tool.hatch.build.targets.sdist]
include = ["src/harpreet"]

[tool.hatch.build.targets.wheel]
include = ["src/harpreet"]

[tool.hatch.build.targets.wheel.sources]
"src/harpreet" = "harpreet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
